# tinykern

./: Makefile  README.md  pyproject.toml  setup.py
examples/: basic.py
tinykern/: main.py
tinykern/csrc/: matmul_kernel.cu  matmul_wrapper.cpp
