[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "tinykern"
version = "0.1.0"
description = "Minimal CUDA kernel examples"
requires-python = ">=3.11"
dependencies = [
    # "numpy>=2.1.3",
    # "pyobjc-framework-metal>=10.3.1",
    "setuptools>=75.6.0",
    "torch==2.1.2",
]

[tool.setuptools]
packages = ["tinykern"]
