[build-system]
requires = ["setuptools>=61.0", "wheel", "torch==2.1.2", "ninja"]
build-backend = "setuptools.build_meta"


[project]
name = "tinykern"
version = "0.1.0"
description = "Minimal CUDA kernel examples"
requires-python = ">=3.11"
dependencies = ["setuptools>=75.6.0", "torch==2.1.2"]

# NOTE
# this avoids building the package when using `uv run`
# since that produces a .so and we want to test the .whl
[tool.uv]
package = false

[tool.setuptools]
packages = ["tinykern"]
